[package]
name = "dom"
version = "0.1.0"
authors = ["Anton Shramko <antonshramko@yandex.ru>"]

[dependencies]
self-tokenize-macro = { git = "https://github.com/victorporof/rust-self-tokenize.git" }
self-tokenize-trait = { git = "https://github.com/victorporof/rust-self-tokenize.git" }
yoga =  { version = "0.2", path = "../../yoga-rs", features = ["serde_support"] }
serde_derive = { version = "=1.0.66", features = ["deserialize_in_place"] }
serde = { version = "=1.0.66", features = ["rc"] }
rsx-tree = { path = "../rsx-tree" }
enum-primitive-derive = "0.1.2"
jss = { path = "../../jss-rs" }
num-traits = "0.1.2"
