[package]
name = "dom"
version = "0.1.0"
authors = ["Anton Shramko <antonshramko@yandex.ru>"]

[dependencies]
self-tokenize-macro = { git = "https://github.com/victorporof/rust-self-tokenize.git" }
self-tokenize-trait = { git = "https://github.com/victorporof/rust-self-tokenize.git" }
serde_derive = { version = "=1.0.66", features = ["deserialize_in_place"] }
serde = { version = "=1.0.66", features = ["rc"] }
rsx-tree = { path = "../rsx-tree" }
enum-primitive-derive = "0.1.2"
num-traits = "0.1.2"

yoga = { git = "https://github.com/rise-ui/yoga-rs", branch = "enum-case", features = ["serde_support"] }
# jss = { git = "https://github.com/rise-ui/jss-rs" }
jss = { path = "../../jss-rs" }
